matrix-coturn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn
  namespace: matrix-coturn
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      labels:
        app: coturn
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: yeager
      containers:
        - name: coturn
          image: coturn/coturn:latest@sha256:bbefd3e1fdfdc0d58770fe01b581fd8b00d9f3a5580d00acb77cf719a6bc78e3
          args: ["turnserver", "-c", "/etc/coturn/turnserver.conf"]
          volumeMounts:
            - name: config-rendered
              mountPath: /etc/coturn
              readOnly: true
            - name: letsencrypt
              mountPath: /etc/letsencrypt
              readOnly: true
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "25m"
      volumes:
        - name: config-tmpl
          configMap:
            name: coturn-config
        - name: config-rendered
          emptyDir: {}
        - name: letsencrypt
          hostPath:
            path: /etc/letsencrypt
            type: Directory
